// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs/rules/wcag/h63.md inline validation: correct-col 1`] = `[]`;

exports[`docs/rules/wcag/h63.md inline validation: correct-colgroup 1`] = `[]`;

exports[`docs/rules/wcag/h63.md inline validation: correct-row 1`] = `[]`;

exports[`docs/rules/wcag/h63.md inline validation: correct-rowgroup 1`] = `[]`;

exports[`docs/rules/wcag/h63.md inline validation: incorrect-auto 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 12,
        "line": 2,
        "message": "<th> element must have a valid scope attribute: row, col, rowgroup or colgroup",
        "offset": 58,
        "ruleId": "wcag/h63",
        "ruleUrl": "https://html-validate.org/rules/wcag/h63.html",
        "selector": "th",
        "severity": 2,
        "size": 4,
      },
    ],
    "source": "<!-- auto state cannot be set with a value -->
<th scope="auto"></th>",
    "warningCount": 0,
  },
]
`;

exports[`docs/rules/wcag/h63.md inline validation: incorrect-missing 1`] = `
[
  {
    "errorCount": 1,
    "filePath": "inline",
    "messages": [
      {
        "column": 2,
        "line": 1,
        "message": "<th> element must have a valid scope attribute: row, col, rowgroup or colgroup",
        "offset": 1,
        "ruleId": "wcag/h63",
        "ruleUrl": "https://html-validate.org/rules/wcag/h63.html",
        "selector": "th",
        "severity": 2,
        "size": 2,
      },
    ],
    "source": "<th></th>",
    "warningCount": 0,
  },
]
`;
